# CGI-Web-Server

./: .gitignore  BUILD.md  CMakeCache.txt  CMakeLists.txt  README.md  WebServer  build.ninja  cmake_install.cmake  vcpkg.json
Server/: Server.cpp  Server.h  Session.cpp  Session.h  Socket.cpp  Transaction.cpp  Transaction.h  http.cpp  http.h  logger.cpp  logger.h  main.cpp  my_server
include/: MethodHandler.h  Middleware.h  RequestHandler.h  Router.h  Server.h  Session.h  Sink.h  Socket.h  Streamer.h  Transaction.h  config.h  http.h  logger.h  logger_macros.h
src/: GetHandler.cpp  HeadHandler.cpp  MethodHandler.h  Middleware.cpp  Middleware.h  OptionsHandler.cpp  PostHandler.cpp  RequestHandler.cpp  Router.cpp  Router.h  Server.cpp  Server.h  Session.cpp  Session.h  Sink.cpp  Socket.cpp  Streamer.cc  Streamer.cpp  Streamer.h  Transaction.h  config.cpp  config.h  http.cpp  http.h  logger.cpp  logger_macros.h  main.cc  main.cpp
src/config/: config.h
src/core/: Resolver.h  concepts.h  time.h
src/http/: Exception.h  Request.h  Response.h  Server.cc  Server.h  Session.cc  Session.h  Transaction.h  factories.h  forward.h
src/http/handlers/: GetHandler.cc  HeadHandler.cc  MethodHandler.h  OptionsHandler.cc  PostHandler.cc
src/http/mw/: Authenticator.cc  Authenticator.h  Context.h  ErrorHandler.cc  ErrorHandler.h  Logger.cc  Logger.h  Middleware.cc  Middleware.h  Parser.cc  Parser.h  rate_limiters.cc  rate_limiters.h
src/http/parsing/: parse.cc  parse.h
src/http/routing/: Route.cc  Route.h  Router.cc  Router.h
src/io/: Acceptor.cc  Acceptor.h  Socket.cc  Socket.h  forward.h  io.cc  io.h
src/logger/: Entry.cc  Entry.h  Logger.cc  Logger.h  Sink.cc  Sink.h  forward.h  logger.cpp  logger.h  macros.h
tests/: CMakeLists.txt
tests/testkit/: ClientSocket.h  utils.h
tests/testkit/fakes/: fakes.h
tests/unit/: ResolverTests.cc  ServerTests.cc  ServerTestsNoNetwork.cc
